Fix active UI, store human job URLs, safe closeout

--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
           <input id="companyId" type="text" placeholder="Optional (e.g., 12)" />
         </div>
         <div class="control">
-          <label for="activeFilter">Active Filter</label>
+          <label for="activeFilter">List Filter</label>
           <select id="activeFilter">
             <option value="all">All</option>
             <option value="true">Active</option>
@@ -40,6 +40,7 @@
         </div>
         <div class="actions">
           <button id="loadActive" class="btn primary">Load Active</button>
+          <button id="loadAll" class="btn">Load All</button>
           <button id="loadNew" class="btn">Load New Since</button>
           <button id="loadClosed" class="btn">Load Closed Since</button>
         </div>
