--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -22,6 +22,17 @@
           <label for="companyId">Company ID</label>
           <input id="companyId" type="text" placeholder="Optional (e.g., 12)" />
         </div>
+        <div class="control wide">
+          <label for="query">Query</label>
+          <input id="query" type="text" placeholder="software engineer OR data scientist" />
+        </div>
+        <div class="control inline">
+          <label class="checkbox" for="csMode">
+            <input id="csMode" type="checkbox" />
+            CS Mode
+          </label>
+          <button id="usePreset" class="btn small" type="button">Use CS preset</button>
+        </div>
         <div class="control">
           <label for="activeFilter">List Filter</label>
           <select id="activeFilter">
